--- a/BusTicketManagementSystem/Dashboard.resx
+++ b/BusTicketManagementSystem/Dashboard.resx
@@ -11989,7 +11989,7 @@
         +YN03R2OiCoJeDPehQAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="guna2Button7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnAnalytics.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAS5JREFUSEvd
         lWuVwjAUhCthJSChEpCABCTggHWwOFgcbCXgAAnUATgoM8mE3IYLBLb82P3OmUOZJJM2z+b/MQxDC31D
